--- a/Cadastro.html
+++ b/Cadastro.html
@@ -3,9 +3,10 @@
   <meta charset="UTF-8" />
   <title>Formulário de Login e Registro</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-  <link href="bootstrap.css/css/bootstrap-grid.min.css"rel="stylesheet" type="tem/css"/>
-  <link rel="stylesheet"href="reset.css"/>
-  <script type="tex/javascript" src="bootstrap.js/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="css/styles.css"/>
+  <link rel="stylesheet" href="css/reset.css"/>
+  
+  
 </head>
 <body>
     
@@ -80,6 +81,7 @@
         </form>
       </div>
     </div>
-  </div>  
+  </div> 
+  <script src="js/bootstrap.bundle.min.js"></script> 
 </body>
 </html>
