--- a/indexGda.html
+++ b/indexGda.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="css/reset.css"/>
+    <link rel="stylesheet" href="css/bootstrap-grid.css"/>
+
     <title>Plataforma de Cursos On line</title>
 </head>
 
@@ -40,6 +43,7 @@
             </form>
         </div>
     </div>
+    <script type="text/javascript" src="js/bootstrap.bundle.min.js.map"></script>
 </body>
 
 </html>
